# mcp-db

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CLAUDE.md  README.md  docker-compose.test.yml  mypy.ini  pyproject.toml  pytest.ini
.claude/commands/: commit.md
.claude/skills/github-action/: SKILL.md  examples.md  reference.md
.claude/skills/pre-commit/: SKILL.md  example.md  reference.md
.claude/skills/project-doc/: SKILL.md  example.md
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  PRECOMMIT.md  README_zh.md  prd.md  task.md  tdd.md  test.md  uat.md
skills/mcp-database/: SKILL.md
skills/mcp-database/references/: database-urls.md  errors.md  filter-dsl.md  quick-ref.md
src/mcp_database/: __init__.py
src/mcp_database/adapters/: __init__.py  factory.py
src/mcp_database/config/: settings.py
src/mcp_database/core/: __init__.py  adapter.py  exceptions.py  filters.py  models.py  permissions.py  security.py
src/mcp_database/server/: __init__.py  cli.py
src/mcp_database/utils/: audit_logger.py
tests/: test_adapter.py  test_audit_log.py  test_config.py  test_deployment_scenario.py  test_exceptions.py  test_factory.py  test_filters.py  test_models.py  test_permissions.py  test_security.py  test_server.py  utils.py
tests/benchmark/: __init__.py  test_performance.py
tests/integration/: test_concurrent.py  test_error_handling.py
tests/test_adapters/: __init__.py  test_mongodb.py  test_opensearch.py  test_redis.py  test_sql_base.py  test_supabase.py
(+33 files in other folders)
