[project]
name = "mcp-database"
version = "0.1.0"
description = "MCP Database SDK - 统一数据库操作接口"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "motor>=3.3.0",
    "pymongo>=4.5.0,<5.0.0",
    "redis>=5.0.0",
    "opensearch-py>=2.4.0",
    "sqlparse>=0.4.4",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[mypy.overrides]]
module = "motor.*"
ignore_missing_imports = true

[[mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[mypy.overrides]]
module = "opensearchpy.*"
ignore_missing_imports = true